--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!-- 導覽列 -->
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <a class="navbar-brand" href="index.html">程式設計訓練班</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
@@ -57,6 +58,7 @@
             </form>
         </div>
     </nav>
+
     <div class="jumbotron">
         <h1 class="display-3">今日最新消息</h1>
         <p class="lead">Java / Python / C / C++ / C# / PHP......</p>
@@ -65,83 +67,96 @@
             <a class="btn btn-primary btn-lg" href="moreinfo.html" role="button">檢視更多</a>
         </p>
     </div>
-    <div class="m-5">
-        <!--切邊界-->
+
+    <div class="container">
         <form action="check.php" method="POST">
-            <h2 style="text-align: center;">課程諮詢</h2>
-            <div class="row">
-                <div class="col">
-                    <label for="">姓名</label>
+            <h2 class="pt-3 pb-3 text-center">課程諮詢</h2>
+            <div class="form-group row row justify-content-center">
+                <label for="" class="col-sm-2 col-form-label">姓名</label>
+                <div class="col-sm-5">
                     <input type="text" class="form-control" placeholder="請輸入姓名" required>
                 </div>
-                <div class="col">
-                    <label for="">電話</label>
+            </div>
+            <div class="form-group row row justify-content-center">
+                <label for="mobile" class="col-sm-2 col-form-label">電話</label>
+                <div class="col-sm-5">
                     <input type="mobile" class="form-control" placeholder="請輸入電話" required>
                 </div>
             </div>
-            <div class="form-group">
-                <br><label for="e-mail">E-mail</label>
-                <input type="email" name="e-mail" id="e-mail" class="form-control" placeholder="請輸入e-mail" required>
+            <div class="form-group row row justify-content-center">
+                <label for="e-mail" class="col-sm-2 col-form-label">信箱</label>
+                <div class="col-sm-5">
+                    <input type="email" name="e-mail" id="e-mail" class="form-control" placeholder="請輸入e-mail" required>
+                </div>
             </div>
-            <label for='directions'>詢問方向</label></br>
-            <div class="form-check form-check-inline">
-                <label class="form-check-label m1-2">
+            <div class="form-group row row justify-content-center">
+                <label for="" class="col-sm-2 col-form-label">最高學歷</label>
+                <div class="col-sm-5">
+                    <select class="form-control" name="degree" id="">
+                        <option value="4">碩士以上</option>
+                        <option value="3">大學</option>
+                        <option value="2">高中</option>
+                        <option value="1">國中以下</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group row row justify-content-center">
+                <label for='directions' class="col-sm-2 col-form-label">詢問方向</label>
+                <div class="pl-3 form-check form-check-inline">
                     <input class="form-check-input" type="checkbox" name="directions" id="directions"
-                        value="checkedValue">程式設計
-                </label>
-                <label class="form-check-label ml-2">
+                        value="checkedValue">
+                    <label class="form-check-label">程式設計</label>
+                </div>
+                <div class="pl-3 form-check form-check-inline">
                     <input class="form-check-input" type="checkbox" name="directions" id="directions"
-                        value="checkedValue">網頁開發
-                </label>
-                <label class="form-check-label ml-2">
+                        value="checkedValue">
+                    <label class="form-check-label">網頁開發</label>
+                </div>
+                <div class="pl-3 form-check form-check-inline">
                     <input class="form-check-input" type="checkbox" name="directions" id="directions"
-                        value="checkedValue">遊戲設計
-                </label>
-                <label class="form-check-label ml-2">
+                        value="checkedValue">
+                    <label class="form-check-label">遊戲設計</label>
+                </div>
+                <div class="pl-3 form-check form-check-inline">
                     <input class="form-check-input" type="checkbox" name="directions" id="directions"
-                        value="checkedValue">資料分析
-                </label>
+                        value="checkedValue">
+                    <label class="form-check-label">資料分析</label>
+                </div>
             </div>
-            <div class="form-group">
-                <br><label for="">最高學歷</label>
-                <select class="form-control" name="degree" id="">
-                    <option value="4">碩士以上</option>
-                    <option value="3">大學</option>
-                    <option value="2">高中</option>
-                    <option value="1">國中以下</option>
-                </select>
+            <div class="form-group row row justify-content-center">
+                <label for="date" class="col-sm-2 col-form-label">預約時間</label>
+                <div class="col-sm-5">
+                    <input type="date" name="" id="" class="form-control" placeholder="年/月/日">
+                </div>
             </div>
-            <div class="form-group">
-                <label for="msg">留言區</label>
-                <textarea class="form-control" name="msg" id="msg" rows="4" placeholder="對本班課程有任何想問的歡迎留言"></textarea>
+            <div class="form-group row row justify-content-center">
+                <label for="msg" class="col-sm-2 col-form-label">留言區</label>
+                <div class="col-sm-5">
+                    <textarea class="form-control" name="msg" id="msg" rows="4"
+                        placeholder="對本班課程有任何想詢問的歡迎留言"></textarea>
+                </div>
             </div>
-            <!-- <div class="form-group">
-                <label for="password">密碼</label>
-                <input type="password" name="password" id="password" class="form-control" placeholder="請輸入密碼">
+            <div class="row justify-content-md-center">
+                <label for='directions' class="col-sm-5 col-form-label">提交表單</label>
+                <div class="pl-3 form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="directions" id="directions" value="checkedValue">
+                    <label class="form-check-label">同意</label>
+                </div>
+                <div class="pl-3 form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="directions" id="directions" value="checkedValue">
+                    <label class="form-check-label">不同意</label>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="date">生日</label>
-                <input type="date" name="date" id="date" class="form-control" placeholder="年/月/日">
+            <div class="row justify-content-md-center">
+                <label for="" class="col-sm-2 col-form-label"></label>
+                <div class="col-sm-5 text-right">
+                    <button type="submit" class="btn btn-primary mt-3">送出</button>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="color">顏色</label>
-                <input type="color" name="color" id="color" class="form-control" placeholder="請選擇顏色">
-            </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="radio" class="form-check-input" name="sex" id="" value="M" checked>
-                    男性
-                </label>
-            </div>
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input type="radio" class="form-check-input" name="sex" id="" value="W">
-                    女性
-                </label>
-            </div> -->
-            <button type="submit" class="btn btn-primary">送出</button>
         </form>
     </div>
+
+    <!-- 表格 -->
     <div class="m-5">
         <table class="table table-striped table-bordered table-hover">
             <thead class="table-info text-center">
@@ -152,7 +167,6 @@
                 </tr>
             </thead>
             <tbody>
-                <!--表格的內容-->
                 <tr>
                     <th scope="row" class="text-center">001</th>
                     <td>程式設計基礎班(3H)</td>
@@ -185,6 +199,7 @@
         </table>
     </div>
     <p class="card-title" style="text-decoration: underline;text-align: center;">*此網站為教學練習之用途。</p>
+
     <!-- Back to Top -->
     <a class="gotop" onclick="GoTop()">
         <font color="white">Top</font>
